@@ -2,6 +2,7 @@ package com.iot.managerservice.infrastructure.database.postgresql;
 
 import com.iot.managerservice.application.grpc.generated.Settings; // IMPORTANTE: Importamos tu clase gRPC
 import com.iot.managerservice.domain.model.HubIdAndVersion;
+import com.iot.managerservice.domain.model.HubSettings;
 import com.iot.managerservice.domain.repository.HubRepository;
 import com.iot.managerservice.infrastructure.database.postgresql.entities.HubEntity;
 import com.iot.managerservice.infrastructure.database.postgresql.repositories.JpaHubRepository;
@@ -22,53 +23,40 @@ public class PostgresHubRepositoryAdapter implements HubRepository {
     }
 
     @Override
-    public void save(String hubId, Long messageId, Object payload) {
-        Settings settings = (Settings) payload;
-
+    public void save(HubSettings settings, Long messageId) {
         HubEntity entity = new HubEntity();
-        entity.setHubId(hubId);
+        entity.setHubId(settings.hubId());
         entity.setMessageId(messageId);
-        entity.setNetworkId(settings.getNetwork());
-        entity.setDeviceName(settings.getDeviceName());
-        entity.setWifiSsid(settings.getWifiSsid());
-        entity.setWifiPassword(settings.getWifiPassword());
-        entity.setMqttUri(settings.getMqttUri());
-        entity.setSample(settings.getSample());
-
-        entity.setEnergyMode(settings.getEnergyMode());
+        mapSettingsToEntity(settings, entity); // Método auxiliar abajo
 
         jpaHubRepository.save(entity);
-        log.info("Guardado nuevo registro en Postgres para el Hub: {} con MsgId: {}", hubId, messageId);
+        log.info("Nuevo Hub guardado en Postgres: {}", settings.hubId());
     }
 
     @Override
-    public void update(String hubId, Long messageId, Object payload) {
-        Settings settings = (Settings) payload;
-
-        jpaHubRepository.findById(hubId).ifPresentOrElse(entity -> {
-            // Si lo encuentra, actualizar campos
+    public void update(HubSettings settings, Long messageId) {
+        jpaHubRepository.findById(settings.hubId()).ifPresent(entity -> {
             entity.setMessageId(messageId);
-            entity.setNetworkId(settings.getNetwork());
-            entity.setDeviceName(settings.getDeviceName());
-            entity.setWifiSsid(settings.getWifiSsid());
-            entity.setWifiPassword(settings.getWifiPassword());
-            entity.setMqttUri(settings.getMqttUri());
-            entity.setSample(settings.getSample());
-            entity.setEnergyMode(settings.getEnergyMode());
-
+            mapSettingsToEntity(settings, entity);
             jpaHubRepository.save(entity);
-            log.info("Actualizado registro existente en Postgres para el Hub: {} con MsgId: {}", hubId, messageId);
-        }, () -> {
-            log.error("Intento de actualizar un Hub que no existe en BD: {}", hubId);
+            log.info("Hub actualizado en Postgres: {}", settings.hubId());
         });
+    }
+
+    private void mapSettingsToEntity(HubSettings s, HubEntity e) {
+        e.setNetworkId(s.networkId());
+        e.setDeviceName(s.deviceName());
+        e.setWifiSsid(s.wifiSsid());
+        e.setWifiPassword(s.wifiPassword());
+        e.setMqttUri(s.mqttUri());
+        e.setSample(s.sample());
+        e.setEnergyMode(s.energyMode());
     }
 
     @Override
     public List<HubIdAndVersion> getAllHubVersions() {
-        log.info("Consultando todas las versiones de Hubs en la base de datos...");
-
         return jpaHubRepository.findAll().stream()
-                .map(entity -> new HubIdAndVersion(entity.getHubId(), entity.getMessageId()))
-                .collect(Collectors.toList());
+                .map(h -> new HubIdAndVersion(h.getHubId(), h.getMessageId()))
+                .toList();
     }
 }
